  during reverse lookups. (Nick Czeczulin)

* Fix encoding problem in makepy (Massa, Harald Armin)

* Pythonwin: trim leading and trailing whitespace in calltip text (kxroberto)

* Pythonwin: fix reload of package modules and support for 'pyw' and 'pyx' 
  extensions (kxroberto)

* Pythonwin: PYTHONSTARTUP is honoured, just like when using python.exe
  (kxroberto)

* New win32api functions GetKeyboardLayoutName, MapVirtualKey and ToAsciiEx

* Add win32file.WSAEnumNetworkEvents (Ziga Seilnacht via patch 3022832)

* Get vtable interfaces working on 64bit windows (Nikolay Igotti via patch 
  3002383)

* Pythonwin: if the interactive window is cleared, avoid the blue color and 
  large font on the new line (markt via patch 2813056)

* Fix Python reference leak when calling MAPI/Exchange functions which
  take an SRowSet param.

* Fix Pythonwin's Edit/Replace dialog in Python 2.3 (bug 2962078)

* Fix a few axscript issues with py3k.

* Pythonwin now offers to create the file when attempting to open a file
  that doesn't exist (ghazel via bug 1409321)

Since build 213:
----------------

* pythoncom gets better support for 64bit integers, including in arrays.

* pythoncom may fail to import on Windows 2000 installs with a default IE
  (Roger)

* Fix Pythonwin when backspacing over an extended character (from markt
 (metolone), via bug 2618277)

* Fixed a regression which would cause an error if you compared a PyTime 
  object to any other type, including None

Since build 212:
----------------

* py3k work - see the notes in the main documentation index for details,
  but this entailed a huge overhaul of almost all the pywin32 sources.
  Many things have been modernized for the first time in over a decade,
  and may new tests have been added.  As a result, build 213 will not
  be recommended for production work and should be treated as beta quality.

  Huge thanks to:
  - Roger Upole: for starting the py3k work, and without whom the py3k work